k8s/ingress.alt.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: docapp
spec:
  ingressClassName: nginx
  rules:
  - host: docapp.127.0.0.1.nip.io
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: backend
            port:
              number: 8080
      - path: /actuator
        pathType: Prefix
        backend:
          service:
            name: backend
            port:
              number: 8080
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
